Multiple domain names support added
Squashed commit of the following:

commit 90e6d6ffe7d1110bb991d0f164cc239b20eb762b
Author: Dmitry Makarov <dmitry@dmitry.fi>
Date:   Mon Dec 21 16:17:45 2020 +0200

    Support for multiple domain names added

--- a/roles/wordpress/files/nginx.conf.j2
+++ b/roles/wordpress/files/nginx.conf.j2
@@ -1,7 +1,7 @@
 server {
     root {{ wordpress_path }};
     index index.php;
-    server_name {{ wordpress_http_host }} www.{{ wordpress_http_host }};
+    server_name {{ wordpress_http_hosts | join(' ') }} www.{{ wordpress_http_hosts | join(' www.') }};
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
@@ -17,20 +17,22 @@ server {
     }
 
     listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/{{ wordpress_http_host }}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/{{ wordpress_http_host }}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/{{ wordpress_http_hosts | first }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ wordpress_http_hosts | first }}/privkey.pem;
 }
 
 server {
-    if ($host = {{ wordpress_http_host }}) {
+{% for host in wordpress_http_hosts %}
+    if ($host = {{ host }}) {
         return 301 https://$host$request_uri;
     }
 
-    if ($host = www.{{ wordpress_http_host }}) {
+    if ($host = www.{{ host }}) {
         return 301 https://$host$request_uri;
     }
 
+{% endfor %}
     listen 80;
-    server_name {{ wordpress_http_host }} www.{{ wordpress_http_host }};
+    server_name {{ wordpress_http_hosts | join(' ') }} www.{{ wordpress_http_hosts | join(' www.') }};
     return 404;
 }
