Nginx configuration updated

--- a/roles/wordpress/files/nginx.conf.j2
+++ b/roles/wordpress/files/nginx.conf.j2
@@ -1,27 +1,54 @@
+upstream php {
+    server unix:/var/run/php/php{{ php_version }}-fpm.sock;
+}
+
 server {
+    listen 443 ssl;
+    server_name {{ wordpress_http_hosts | join(' ') }} www.{{ wordpress_http_hosts | join(' www.') }};
     root {{ wordpress_path }};
     index index.php;
-    server_name {{ wordpress_http_hosts | join(' ') }} www.{{ wordpress_http_hosts | join(' www.') }};
 
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
+
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+    
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+        fastcgi_pass php;
     }
 
-    location ~ /\.ht {
+    location ~ /\. {
         deny all;
     }
 
-    listen 443 ssl;
+    location ~* /(?:uploads|files)/.*\.php$ {
+        deny all;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires max;
+        log_not_found off;
+    }
+
     ssl_certificate /etc/letsencrypt/live/{{ wordpress_http_hosts | first }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ wordpress_http_hosts | first }}/privkey.pem;
 }
 
 server {
+    listen 80;
+    server_name {{ wordpress_http_hosts | join(' ') }} www.{{ wordpress_http_hosts | join(' www.') }};
+
 {% for host in wordpress_http_hosts %}
     if ($host = {{ host }}) {
         return 301 https://$host$request_uri;
@@ -32,8 +59,6 @@ server {
     }
 
 {% endfor %}
-    listen 80;
-    server_name {{ wordpress_http_hosts | join(' ') }} www.{{ wordpress_http_hosts | join(' www.') }};
     return 404;
 }
 
